--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-textarea-autosize": "^8.5.3",
     "string-to-color": "^2.2.2",
     "web-vitals": "^2.1.4"
   },
