--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-textarea-autosize": "^8.5.3",
+    "react-time-ago": "^7.2.1",
     "string-to-color": "^2.2.2",
     "web-vitals": "^2.1.4"
   },
