--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-auth-kit": "^3.0.0-alpha.15",
     "react-dom": "^18.2.0",
+    "react-phone-input-2": "^2.15.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
